<resources>
    <string name="app_name">day 29</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="favorites">Favorites</string>
    <string name="trash">Trash</string>
    <string name="personal_folders">Personal Folders</string>
    <string name="family">Family</string>
    <string name="trips">Trips</string>
    <string name="wedding">Wedding</string>
    <string name="gmail">Gmail</string>
    <string name="compose">Compose</string>
</resources>